Oops, make puppeteer listen on IPv6

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "parallel_tasks": 15
   },
   "puppeteer": {
-    "host": "0.0.0.0",
+    "host": "::",
     "port": 3001,
     "args": [
       "--no-sandbox",
